@@ -23,7 +23,6 @@ import com.hivemq.bridge.config.LocalSubscription;
 import com.hivemq.bridge.config.MqttBridge;
 import com.hivemq.bridge.config.RemoteSubscription;
 import com.hivemq.configuration.entity.HiveMQConfigEntity;
-import com.hivemq.configuration.entity.api.AdminApiEntity;
 import com.hivemq.configuration.entity.bridge.BridgeAuthenticationEntity;
 import com.hivemq.configuration.entity.bridge.BridgeMqttEntity;
 import com.hivemq.configuration.entity.bridge.BridgeTlsEntity;
@@ -37,52 +36,92 @@ import com.hivemq.configuration.entity.bridge.RemoteBrokerEntity;
 import com.hivemq.configuration.entity.bridge.RemoteSubscriptionEntity;
 import com.hivemq.configuration.entity.listener.tls.KeystoreEntity;
 import com.hivemq.configuration.entity.listener.tls.TruststoreEntity;
-import com.hivemq.configuration.service.BridgeConfigurationService;
 import com.hivemq.edge.HiveMQEdgeConstants;
 import com.hivemq.exceptions.UnrecoverableException;
+import com.hivemq.util.Topics;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import com.hivemq.util.Topics;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import javax.inject.Inject;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
-public class BridgeConfigurator implements Syncable<List<MqttBridgeEntity>>{
+public class BridgeExtractor implements ReloadableExtractor<List<@NotNull MqttBridgeEntity>, List<@NotNull MqttBridge>> {
 
-    private static final Logger log = LoggerFactory.getLogger(BridgeConfigurator.class);
+    private static final Logger log = LoggerFactory.getLogger(BridgeExtractor.class);
     public static final String KEYSTORE_TYPE_PKCS12 = "PKCS12";
     public static final String KEYSTORE_TYPE_JKS = "JKS";
 
-    private final @NotNull BridgeConfigurationService bridgeConfigurationService;
+    private volatile @NotNull List<@NotNull MqttBridge> bridgeEntities = List.of();
+    private volatile @Nullable Consumer<List<@NotNull MqttBridge>> bridgeEntitiesConsumer = cfg -> log.debug("No consumer registered yet");
 
-    private volatile List<MqttBridgeEntity> configEntity;
-    private volatile boolean initialized = false;
+    private final @NotNull ConfigFileReaderWriter configFileReaderWriter;
 
-    @Inject
-    public BridgeConfigurator(
-            final @NotNull BridgeConfigurationService bridgeConfigurationService) {
-        this.bridgeConfigurationService = bridgeConfigurationService;
+    public BridgeExtractor(@NotNull final ConfigFileReaderWriter configFileReaderWriter) {
+        this.configFileReaderWriter = configFileReaderWriter;
     }
+
+    public synchronized void addBridge(final @NotNull MqttBridge mqttBridge) {
+        if (!mqttBridge.isPersist()) {
+            log.info(
+                    "MQTT Bridge '{}' has persist flag set to false, QoS for publishes from local subscriptions will be downgraded to AT_MOST_ONCE.",
+                    mqttBridge.getId());
+        }
+
+        bridgeEntities = new ImmutableList.Builder<MqttBridge>()
+                .addAll(bridgeEntities)
+                .add(mqttBridge)
+                .build();
+
+        notifyConsumer();
+        configFileReaderWriter.writeConfigWithSync();
+    }
+
+    public @NotNull List<MqttBridge> getBridges() {
+        return new ImmutableList.Builder<MqttBridge>()
+                .addAll(bridgeEntities)
+                .build();
+    }
+
+    public synchronized void removeBridge(final @NotNull String id) {
+        bridgeEntities = bridgeEntities.stream().filter(entry -> !entry.getId().equals(id)).toList();
+
+        notifyConsumer();
+        configFileReaderWriter.writeConfigWithSync();
+    }
+
+    private void notifyConsumer() {
+        final var consumer = bridgeEntitiesConsumer;
+        if(consumer != null) {
+            consumer.accept(bridgeEntities);
+        }
+    }
+
 
     @Override
     public boolean needsRestartWithConfig(final HiveMQConfigEntity config) {
-        if(initialized && hasChanged(this.configEntity, config.getBridgeConfig())) {
-            return true;
-        }
         return false;
     }
 
     @Override
-    public ConfigResult setConfig(@NotNull final HiveMQConfigEntity config) {
-        this.configEntity = config.getBridgeConfig();
-        initialized = true;
+    public synchronized Configurator.ConfigResult updateConfig(final HiveMQConfigEntity config) {
+        bridgeEntities = convertBridgeConfigs(config);
+        notifyConsumer();
+        return Configurator.ConfigResult.SUCCESS;
+    }
 
-        for (final MqttBridgeEntity bridgeConfig : configEntity) {
+    @Override
+    public void registerConsumer(final Consumer<List<@NotNull MqttBridge>> consumer) {
+        this.bridgeEntitiesConsumer = consumer;
+        notifyConsumer();
+    }
+
+    private @NotNull List<@NotNull MqttBridge> convertBridgeConfigs(final @NotNull HiveMQConfigEntity config) {
+        return config.getBridgeConfig().stream().map(bridgeConfig ->  {
             final RemoteBrokerEntity remoteBroker = bridgeConfig.getRemoteBroker();
             final MqttBridge.Builder builder = new MqttBridge.Builder();
 
@@ -148,16 +187,14 @@ public class BridgeConfigurator implements Syncable<List<MqttBridgeEntity>>{
             }
 
             builder.persist(bridgeConfig.getPersist());
-
-            bridgeConfigurationService.addBridge(builder.build());
-        }
-        return ConfigResult.SUCCESS;
+            return builder.build();
+        }).toList();
     }
 
     private @NotNull List<LocalSubscription> convertLocalSubscriptions(
             final @NotNull String name, @NotNull List<ForwardedTopicEntity> forwardedTopics) {
         final ImmutableList.Builder<LocalSubscription> builder = ImmutableList.builder();
-        for (ForwardedTopicEntity forwardedTopic : forwardedTopics) {
+        for (final ForwardedTopicEntity forwardedTopic : forwardedTopics) {
             validateTopicFilters(name, forwardedTopic.getFilters());
             final String exampleTopicFilter = forwardedTopic.getFilters().get(0);
             validateDestinationTopic(name, forwardedTopic.getDestination(), exampleTopicFilter);
@@ -177,7 +214,7 @@ public class BridgeConfigurator implements Syncable<List<MqttBridgeEntity>>{
             log.error("Topic filters are missing for bridge '{}'.", name);
             throw new UnrecoverableException(false);
         }
-        for (String filter : filters) {
+        for (final String filter : filters) {
             if (!Topics.isValidToSubscribe(filter)) {
                 log.error("Topic filter '{}' for bridge '{}' is not valid", filter, name);
                 throw new UnrecoverableException(false);
@@ -188,7 +225,7 @@ public class BridgeConfigurator implements Syncable<List<MqttBridgeEntity>>{
     private @NotNull List<RemoteSubscription> convertRemoteSubscriptions(
             final @NotNull String name, final @NotNull List<RemoteSubscriptionEntity> remoteSubscriptions) {
         final ImmutableList.Builder<RemoteSubscription> builder = ImmutableList.builder();
-        for (RemoteSubscriptionEntity remoteSubscription : remoteSubscriptions) {
+        for (final RemoteSubscriptionEntity remoteSubscription : remoteSubscriptions) {
             final String exampleTopicFilter =
                     remoteSubscription.getFilters().isEmpty() ? "#" : remoteSubscription.getFilters().get(0);
             validateDestinationTopic(name, remoteSubscription.getDestination(), exampleTopicFilter);
@@ -290,24 +327,24 @@ public class BridgeConfigurator implements Syncable<List<MqttBridgeEntity>>{
     }
 
     @Override
-    public void sync(final @NotNull HiveMQConfigEntity entity) {
-        List<MqttBridge> liveBridges = bridgeConfigurationService.getBridges();
-        List<MqttBridgeEntity> newList = liveBridges.stream().map(this::uncovert).collect(Collectors.toList());
+    public synchronized void sync(final @NotNull HiveMQConfigEntity entity) {
+        final var tmpBridges = bridgeEntities;
+        final List<MqttBridgeEntity> newList = tmpBridges.stream().map(this::uncovert).toList();
         entity.getBridgeConfig().clear();
         entity.getBridgeConfig().addAll(newList);
     }
 
-    protected MqttBridgeEntity uncovert(MqttBridge from) {
+    protected MqttBridgeEntity uncovert(final MqttBridge from) {
 
-        MqttBridgeEntity entity = new MqttBridgeEntity();
+        final MqttBridgeEntity entity = new MqttBridgeEntity();
         entity.setId(from.getId());
 
         //-- RemoteBrokerEntity
-        RemoteBrokerEntity remoteBrokerEntity = unconvertBrokerEntity(from);
+        final RemoteBrokerEntity remoteBrokerEntity = unconvertBrokerEntity(from);
         entity.setRemoteBroker(remoteBrokerEntity);
 
         //-- LoopPreventionEntity
-        LoopPreventionEntity loopPreventionEntity = new LoopPreventionEntity();
+        final LoopPreventionEntity loopPreventionEntity = new LoopPreventionEntity();
         loopPreventionEntity.setEnabled(from.isLoopPreventionEnabled());
         loopPreventionEntity.setHopCountLimit(from.getLoopPreventionHopCount());
         entity.setLoopPrevention(loopPreventionEntity);
@@ -326,11 +363,11 @@ public class BridgeConfigurator implements Syncable<List<MqttBridgeEntity>>{
         return entity;
     }
 
-    protected List<RemoteSubscriptionEntity> unconvertRemoteSubscriptions(List<RemoteSubscription> remoteSubscriptionList) {
+    protected List<RemoteSubscriptionEntity> unconvertRemoteSubscriptions(final List<RemoteSubscription> remoteSubscriptionList) {
 
-        ImmutableList.Builder<RemoteSubscriptionEntity> builder = ImmutableList.builder();
-        for (RemoteSubscription subscription : remoteSubscriptionList) {
-            RemoteSubscriptionEntity subscriptionEntity = new RemoteSubscriptionEntity();
+        final ImmutableList.Builder<RemoteSubscriptionEntity> builder = ImmutableList.builder();
+        for (final RemoteSubscription subscription : remoteSubscriptionList) {
+            final RemoteSubscriptionEntity subscriptionEntity = new RemoteSubscriptionEntity();
             subscriptionEntity.setDestination(subscription.getDestination());
             if (subscription.getFilters() != null) {
                 subscriptionEntity.setFilters(new ArrayList<>(subscription.getFilters()));
@@ -348,11 +385,11 @@ public class BridgeConfigurator implements Syncable<List<MqttBridgeEntity>>{
         return builder.build();
     }
 
-    protected List<ForwardedTopicEntity> unconvertLocalSubscriptions(List<LocalSubscription> localSubscriptionList) {
+    protected List<ForwardedTopicEntity> unconvertLocalSubscriptions(final List<LocalSubscription> localSubscriptionList) {
 
-        ImmutableList.Builder<ForwardedTopicEntity> builder = ImmutableList.builder();
-        for (LocalSubscription subscription : localSubscriptionList) {
-            ForwardedTopicEntity forwardedTopicEntity = new ForwardedTopicEntity();
+        final ImmutableList.Builder<ForwardedTopicEntity> builder = ImmutableList.builder();
+        for (final LocalSubscription subscription : localSubscriptionList) {
+            final ForwardedTopicEntity forwardedTopicEntity = new ForwardedTopicEntity();
             forwardedTopicEntity.setDestination(subscription.getDestination());
             if (subscription.getExcludes() != null) {
                 forwardedTopicEntity.setExcludes(new ArrayList<>(subscription.getExcludes()));
@@ -373,21 +410,21 @@ public class BridgeConfigurator implements Syncable<List<MqttBridgeEntity>>{
         return builder.build();
     }
 
-    protected CustomUserPropertyEntity unconvertCustomUserProperty(CustomUserProperty property) {
-        CustomUserPropertyEntity entity = new CustomUserPropertyEntity();
+    protected CustomUserPropertyEntity unconvertCustomUserProperty(final CustomUserProperty property) {
+        final CustomUserPropertyEntity entity = new CustomUserPropertyEntity();
         entity.setKey(property.getKey());
         entity.setValue(property.getValue());
         return entity;
     }
 
-    protected RemoteBrokerEntity unconvertBrokerEntity(MqttBridge from) {
+    protected RemoteBrokerEntity unconvertBrokerEntity(final MqttBridge from) {
 
-        RemoteBrokerEntity remoteBrokerEntity = new RemoteBrokerEntity();
+        final RemoteBrokerEntity remoteBrokerEntity = new RemoteBrokerEntity();
         remoteBrokerEntity.setPort(from.getPort());
         remoteBrokerEntity.setHost(from.getHost());
 
         //Bridge MqttEntity
-        BridgeMqttEntity bridgeMqttEntity = new BridgeMqttEntity();
+        final BridgeMqttEntity bridgeMqttEntity = new BridgeMqttEntity();
         bridgeMqttEntity.setCleanStart(from.isCleanStart());
         bridgeMqttEntity.setClientId(from.getClientId());
         bridgeMqttEntity.setKeepAlive(from.getKeepAlive());
@@ -396,8 +433,8 @@ public class BridgeConfigurator implements Syncable<List<MqttBridgeEntity>>{
 
         //Authentication
         if (from.getUsername() != null && from.getPassword() != null) {
-            BridgeAuthenticationEntity authentication = new BridgeAuthenticationEntity();
-            MqttSimpleAuthenticationEntity simpleAuthenticationEntity = new MqttSimpleAuthenticationEntity();
+            final BridgeAuthenticationEntity authentication = new BridgeAuthenticationEntity();
+            final MqttSimpleAuthenticationEntity simpleAuthenticationEntity = new MqttSimpleAuthenticationEntity();
             simpleAuthenticationEntity.setPassword(from.getPassword());
             simpleAuthenticationEntity.setUser(from.getUsername());
             authentication.setMqttSimpleAuthenticationEntity(simpleAuthenticationEntity);
@@ -415,9 +452,9 @@ public class BridgeConfigurator implements Syncable<List<MqttBridgeEntity>>{
         }
 
         //TLS
-        BridgeTls bridgeTls = from.getBridgeTls();
+        final BridgeTls bridgeTls = from.getBridgeTls();
         if (bridgeTls != null) {
-            BridgeTlsEntity bridgeTlsEntity = new BridgeTlsEntity();
+            final BridgeTlsEntity bridgeTlsEntity = new BridgeTlsEntity();
             bridgeTlsEntity.setEnabled(true);
             bridgeTlsEntity.setHandshakeTimeout(bridgeTls.getHandshakeTimeout());
             bridgeTlsEntity.setVerifyHostname(bridgeTls.isVerifyHostname());
@@ -431,7 +468,7 @@ public class BridgeConfigurator implements Syncable<List<MqttBridgeEntity>>{
             }
 
             if (bridgeTls.getKeystorePath() != null) {
-                KeystoreEntity keystoreEntity = new KeystoreEntity();
+                final KeystoreEntity keystoreEntity = new KeystoreEntity();
                 keystoreEntity.setPath(bridgeTls.getKeystorePath());
                 keystoreEntity.setPassword(bridgeTls.getKeystorePassword());
                 keystoreEntity.setPrivateKeyPassword(bridgeTls.getPrivateKeyPassword());
@@ -439,7 +476,7 @@ public class BridgeConfigurator implements Syncable<List<MqttBridgeEntity>>{
             }
 
             if (bridgeTls.getTruststorePath() != null) {
-                TruststoreEntity truststoreEntity = new TruststoreEntity();
+                final TruststoreEntity truststoreEntity = new TruststoreEntity();
                 truststoreEntity.setPath(bridgeTls.getTruststorePath());
                 truststoreEntity.setPassword(bridgeTls.getTruststorePassword());
                 bridgeTlsEntity.setTrustStore(truststoreEntity);
